# gossamer

./: .conflow.yaml  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .guix-channel  .hypatia-baseline.json  .pre-commit-config.yaml  .tool-versions  .trusted-base-ignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  EXPLAINME.adoc  GETTING-STARTED.md  HANDOVER-gossamer-plugin-system.md  Justfile  LICENSE  NEXT-STEPS.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.adoc.invariants.md  README.md  ROADMAP.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  deno.json  eclexiaiser.toml  flake.nix  gossamer-abi-tests.ipkg  gossamer-abi.ipkg  gossamer-groove.ipkg  (+12 more)
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.githooks/: install.sh  pre-push  validate-a2ml.sh  validate-k9.sh
.github/: .mailmap  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  MAINTAINERS  README.adoc  SECURITY.md  SUPPORT  copilot-instructions.md  dependabot.yml  pull_request_template.md  settings.yml
.machine_readable/: 0.1-AI-MANIFEST.a2ml  ADJUST.contractile  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  MUST.contractile  README.adoc  TRUST.contractile
.well-known/: humans.txt  security.txt
android/: README.adoc
api/: README.adoc
audits/: assail-classifications.a2ml  audit-ffi-2026-05-26.md
benchmarks/: README.adoc  startup-bench.sh
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
src/: abi  (+2 more)
(+527 files in other folders)
