# SPDX-License-Identifier: MPL-2.0
[package]
name = "gossamer-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the Gossamer webview shell — type-safe, linear-resource desktop apps"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/gossamer"
readme = "README.adoc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
# None — links libgossamer at runtime via dlopen or at link time
